// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should parse state from flow on "action_flow_update" with active method = code 1`] = `
{
  "current": "method_active",
  "isReady": true,
  "isSubmitting": false,
  "method": "code",
}
`;

exports[`should parse state from flow on "action_flow_update" with active method = code_recovery 1`] = `
{
  "current": "method_active",
  "isReady": true,
  "isSubmitting": false,
  "method": "code",
}
`;

exports[`should parse state from flow on "action_flow_update" with active method = link_recovery 1`] = `
{
  "current": "method_active",
  "isReady": true,
  "isSubmitting": false,
  "method": "link",
}
`;
